# ZykovColor

./: CMakeLists.txt  CadicalZykovPropagator.cpp  CadicalZykovPropagator.h  ExtendSolvers.cpp  ExtendSolvers.h  FractionalBound.cpp  FractionalBound.h  Graph.cpp  GraphMatrix.cpp  GraphMatrix.h  IncSatGC.cpp  IncSatGC.h  LICENSE  Options.cpp  Options.h  README.md  Statistics.cpp  Statistics.h  build.sh  main.cpp  mnts.cpp  mnts.h
cmake/: FindEXACTCOLORS.cmake  FindGUROBI.cmake  FindOPENWBO.cmake
scripts/: graph_gen.py
